--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,26 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ql-snow{
+  border: transparent !important;
+}
+.ql-editor{
+  min-height: 200px;
+  max-height: 500px;
+  overflow-y: auto;
+  background-color:  rgb(39,39,42);
+}
+.ql-editor >p{
+  font-size: 1rem;
+}
+
+.ql-syntax{
+   font-family: monospace;
+   background-color: rgb(83,83,83);
+}
+
+.ql-toolbar{
+  background-color: gray;
+  border-radius: 4px;
+}
